# operating_system-windows

./: .gitignore  Common.props  RCa18804  RCa51520  README.md  SharedApplicationCommon.props  SharedLibraryCommon.props  StaticLibraryCommon.props  Version2022-07-29-11-19-25.txt  _.cmake  bilbo - Shortcut.lnk  build.h  default_printer_settings.cpp  narrator_test.txt  narrator_test.txt - Shortcut.lnk  package_map.txt  port.props  port_debug.props  port_release.props  releasecomma.txt  releasedot.txt  resource1.h  version.rc  version.rc.template.bak  version2.txt  version5.txt  windows10.manifest
acme_windows/: CMakeLists.txt  _.cpp  _.h  _acme_windows.h  _acme_windows.vcxproj  _acme_windows_vs12.vcxproj  _ansi.cpp  _c.h  _factory.cpp  _file.cpp  _graphics2d.h  _impl.h  _library.h  _no_pch.cpp  _node_windows.h  _wd16.cpp  _wd32.cpp  _windows.h  aaa__library.h  aaa_ansi.cpp  aaa_ansi_file.cpp  aaa_application.cpp  aaa_argcargv.cpp  aaa_bbb_filesystem_file.cpp  aaa_callstack.cpp  aaa_callstack.h  aaa_critical_section.cpp  aaa_dir.cpp  aaa_dir_context.cpp  aaa_dir_system.cpp  aaa_dir_system.h  aaa_environment_variable.cpp  aaa_extract_icon.cpp  aaa_factory_exchange (2).cpp  aaa_file_exception.cpp  aaa_file_exception.h  aaa_gdiplus.cpp  aaa_interaction_debug.cpp  aaa_library1.cpp  aaa_lock.cpp  (+139 more)
apex_windows/: CMakeLists.txt  _.cpp  _.h  _apex_windows.h  _apex_windows.vcxproj  _apex_windows_vs12.vcxproj  _factory.cpp  _library.h  _node_windows1.h  _node_windows_private1.h  _references.txt  _windows1.h  a.h  aaa__library.h  aaa__node_windows1.h  aaa__windows1.h  aaa_application.cpp  aaa_application2.cpp  aaa_archive_palette.h  aaa_archive_printer.cpp  aaa_crypto.cpp  aaa_crypto.h  aaa_factory_exchange1.cpp  aaa_factory_exchange2.h  aaa_folder_watch.h  aaa_node_windows.h  aaa_os_context.cpp  aaa_os_context.h  aaa_thread.cpp  aaa_timer.cpp  aaa_trace.cpp  aaa_want_to_remove_RoundWindowApp.h  aaa_want_to_remove_handle.cpp  aaa_want_to_remove_handle.h  aaa_want_to_remove_printer.cpp  aaa_want_to_remove_printer.h  aaa_want_to_remove_shell1.cpp  aaa_windows.h  apex.cpp  apex.h  (+64 more)
audio_mmsystem/: CMakeLists.txt  _.h  _audio_mmsystem.h  _factory.cpp  _references.txt  aaa__library.h  audio_mmsystem.def  audio_mmsystem.vcxproj  audio_mmsystem.vcxproj.filters  deployment.rc  factory_exchange.cpp  framework.h  in.cpp  in.h  out.cpp  out.h
aura_windows/: CMakeLists.txt  _.cpp  _.h  _aura_windows.h  _aura_windows.vcxproj  _aura_windows_vs12.vcxproj  _factory.cpp  _library.h  _node_windows_private.h  _references.txt  aaa__library.h  aaa_buffer.cpp  aaa_buffer.h  aaa_interaction_impl.cpp  aaa_interaction_impl.h  application.cpp  aura.cpp  aura.h  aura_windows.def  aura_windows.vcxproj  aura_windows.vcxproj.filters  brush.cpp  deployment.rc  extract_icon.cpp  extract_icon.h  factory_exchange (2).cpp  factory_exchange.cpp  factory_exchange.h  framework.cpp  framework.h  hicon_from_ico_file.cpp  interaction_impl.cpp  interaction_impl.cpp.bak  interaction_impl.h  interaction_impl_message_bypass.cpp  interprocess_handler.h  matter.txt  node.cpp  node.h  shell_open.cpp  (+8 more)
innate_subsystem_win32/: BalloonTip.cpp  BalloonTip.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  CommonControlsEx.cpp  CommonControlsEx.h  Control.cpp  Control.h  Dialog.cpp  Dialog.h  DibFrameBuffer.cpp  DibFrameBuffer.h  FilteredTextBox.cpp  FilteredTextBox.h  ImageList.cpp  ImageList.h  ImagedButton.cpp  ImagedButton.h  ListBox.cpp  ListBox.h  ListView.cpp  ListView.h  Menu.cpp  Menu.h  MessageWindow.cpp  MessageWindow.h  NotifyIcon.cpp  NotifyIcon.h  NotifyIconWindow.cpp  NotifyIconWindow.h  PaintWindow.cpp  PaintWindow.h  ProgressBar.cpp  ProgressBar.h  ScrollBar.cpp  ScrollBar.h  SpinControl.cpp  (+51 more)
innate_subsystem_windows/: BalloonTip.cpp  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ComboBox.h  CommonControlsEx.cpp  CommonControlsEx.h  Control.cpp  Control.h  Dialog.cpp  Dialog.h  DibFrameBuffer.h  FilteredTextBox.cpp  FilteredTextBox.h  ImageList.cpp  ImageList.h  ImagedButton.h  ListBox.cpp  ListBox.h  ListView.cpp  ListView.h  Menu.cpp  Menu.h  MessageWindow.cpp  MessageWindow.h  NotifyIcon.cpp  NotifyIcon.h  NotifyIconWindow.h  PaintWindow.cpp  PaintWindow.h  ProgressBar.h  ResourceLoader.cpp  ResourceLoader.h  ScrollBar.cpp  ScrollBar.h  SpinControl.cpp  SpinControl.h  StringFilter.cpp  SystemMetrics.cpp  SystemMetrics.h  (+39 more)
innate_ui_win32/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _references.txt  aaa_ansi_file.cpp  aaa_argcargv.cpp  aaa_bbb_filesystem_file.cpp  aaa_callstack.cpp  aaa_dir.cpp  aaa_environment_variable.cpp  aaa_exception.h  aaa_extract_icon.cpp  aaa_factory_exchange (2).cpp  aaa_file_exception.cpp  aaa_gdiplus.cpp  aaa_interaction_debug.cpp  aaa_library1.cpp  aaa_lock.cpp  aaa_main.cpp  aaa_mutex.h  aaa_shell1.h  aaa_stdio_file.cpp  aaa_stdio_file.h  aaa_time.cpp  aaa_timer.cpp  aaa_want_to_remove_handle (2).cpp  aaa_want_to_remove_main_windows.cpp  aaa_want_to_remove_printer (2).cpp  aaa_want_to_remove_process_env_reader.cpp  aaa_want_to_remove_process_env_reader.h  aaa_want_to_remove_shell1 (2).cpp  bbb_callstack.cpp  bbb_callstack.h  button.cpp  deployment.rc  dialog.cpp  dialog.h  icon.cpp  icon.h  (+10 more)
multimedia_mmsystem/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _library.h  _multimedia_mmsystem.h  _references.txt  aaa__library.h  deployment.rc  factory_exchange.cpp  factory_exchange.h  framework.h  multimedia_mmsystem.def  multimedia_mmsystem.vcxproj  multimedia_mmsystem.vcxproj.filters  translation.cpp  translation.h  windows_media.cpp
music_midi_mmsystem/: CMakeLists.txt  _.h  _factory.cpp  _library.h  _music_midi_mmsystem.h  aaa__library.h  aaa_want_to_remove_music_midi_mmsystem_file1.h  aaa_want_to_remove_music_midi_mmsystem_player.h  aaa_want_to_remove_music_midi_mmsystem_sequence1.h  aaa_want_to_remove_music_midi_mmsystem_sequence_thread.h  buffer.cpp  buffer.h  deployment.rc  factory_exchange.cpp  factory_exchange.h  framework.h  in.cpp  in.h  midi.cpp  midi.h  midi_mmsystem.cpp  music_midi_mmsystem.def  music_midi_mmsystem.vcxproj  music_midi_mmsystem.vcxproj.filters  out.cpp  (+5 more)
(+3377 files in other folders)
